--- a/index.html
+++ b/index.html
@@ -1,163 +1,179 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>صفحة تأجير العجل</title>
+  <title>منصّة تأجير العجل</title>
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="color-scheme" content="light dark" />
   <style>
-    body { font-family: Arial, sans-serif; direction: rtl; padding: 20px; background: #f5f5f5; }
-    h1 { text-align: center; margin-bottom: 20px; }
-    .bike-container { background: white; border-radius: 8px; padding: 15px; margin-bottom: 15px; box-shadow: 0 0 5px #ccc; }
-    label { display: block; margin-top: 10px; }
-    input, button { width: 100%; padding: 7px; margin-top: 5px; box-sizing: border-box; }
-    button { background-color: #007bff; color: white; border: none; cursor: pointer; }
-    button:hover { background-color: #0056b3; }
-    .countdown { margin-top: 10px; font-weight: bold; color: #333; }
-    #currentTime { font-size: 20px; font-weight: bold; text-align: center; margin-bottom: 20px; }
+    body { font-feature-settings: "ss01" on, "cv01" on; transition: background 0.4s; }
+    .hide { display:none; }
   </style>
 </head>
-<body>
+<body class="min-h-screen bg-gradient-to-br from-blue-50 to-emerald-50 text-gray-900 dark:from-gray-900 dark:to-gray-800 dark:text-gray-100 selection:bg-blue-200">
+  <!-- Header -->
+  <header class="sticky top-0 z-10 bg-white/70 dark:bg-gray-900/70 backdrop-blur border-b">
+    <div class="mx-auto max-w-6xl px-4 py-3 flex items-center gap-4">
+      <h1 class="text-xl font-bold text-blue-600">🚲 منصّة تأجير العجل</h1>
+      <div class="ms-auto flex items-center gap-3">
+        <span id="now" class="text-sm text-gray-600 dark:text-gray-300">—</span>
+        <button id="toggleDark" class="text-xs rounded-lg border px-3 py-1.5 hover:bg-gray-100 dark:hover:bg-gray-800">🌙</button>
+        <button id="clearAll" class="text-xs rounded-lg border px-3 py-1.5 hover:bg-gray-100 dark:hover:bg-gray-800">تفريغ الكل</button>
+      </div>
+    </div>
+  </header>
 
-<h1>صفحة تأجير العجل</h1>
-<div id="currentTime">جارٍ تحميل الوقت...</div>
-<div id="bikesContainer"></div>
+  <!-- Stats -->
+  <section class="mx-auto max-w-6xl px-4 py-4 grid grid-cols-2 sm:grid-cols-3 gap-3 text-sm">
+    <div class="rounded-xl bg-emerald-100 dark:bg-emerald-900 p-3 text-center">
+      <p>🚲 متاحة</p>
+      <b id="availableCount">0</b>
+    </div>
+    <div class="rounded-xl bg-amber-100 dark:bg-amber-900 p-3 text-center">
+      <p>⏳ مؤجرة</p>
+      <b id="rentedCount">0</b>
+    </div>
+    <div class="col-span-2 sm:col-span-1">
+      <input id="searchBox" class="w-full rounded-xl border px-3 py-2 text-sm focus:ring focus:ring-blue-200 dark:bg-gray-800 dark:border-gray-700" placeholder="🔍 ابحث بالاسم أو الرقم">
+    </div>
+  </section>
 
-<audio id="alarm" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg" preload="auto"></audio>
+  <!-- Main -->
+  <main class="mx-auto max-w-6xl px-4 py-6">
+    <section id="bikes" class="grid gap-4 sm:grid-cols-2 lg:grid-cols-3"></section>
+  </main>
 
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <!-- Toast -->
+  <div id="toast" class="fixed bottom-4 inset-x-4 sm:left-1/2 sm:-translate-x-1/2 sm:w-[420px] rounded-xl border bg-white dark:bg-gray-800 shadow-lg p-4 text-sm hidden"></div>
+  
+  <!-- Alarm -->
+  <audio id="alarm" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg" preload="auto"></audio>
 
-<script>
-  // إعداد Firebase (بدل القيم بتاعتك هنا)
-  const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_PROJECT.firebaseapp.com",
-    databaseURL: "https://YOUR_PROJECT-default-rtdb.firebaseio.com",
-    projectId: "YOUR_PROJECT",
-    storageBucket: "YOUR_PROJECT.appspot.com",
-    messagingSenderId: "XXXX",
-    appId: "XXXX"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const database = firebase.database();
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
-  // دوال الوقت
-  function getLocalTime() { return new Date(); }
-  function formatTime12(date) {
-    let hours = date.getHours();
-    const minutes = date.getMinutes().toString().padStart(2, '0');
-    const ampm = hours >= 12 ? 'م' : 'ص';
-    hours = hours % 12; hours = hours ? hours : 12;
-    return `${hours}:${minutes} ${ampm}`;
-  }
-  function updateCurrentTime() {
-    document.getElementById('currentTime').textContent = `الوقت الحالي: ${formatTime12(getLocalTime())}`;
-  }
-  setInterval(updateCurrentTime, 1000); updateCurrentTime();
-
-  // إعداد الواجهة
-  const BIKE_COUNT = 10; 
-  const timers = {};
-  const container = document.getElementById('bikesContainer');
-
-  for (let i = 1; i <= BIKE_COUNT; i++) {
-    const div = document.createElement('div');
-    div.className = 'bike-container';
-    div.innerHTML = `
-      <h3>العجلة رقم ${i}</h3>
-      <label>اسم المستأجر:</label>
-      <input id="person${i}" />
-      <label>اسم العجلة:</label>
-      <input id="bike${i}" />
-      <label>مدة الإيجار (دقائق):</label>
-      <input type="number" id="duration${i}" min="1" />
-      <button onclick="startRent(${i})" id="startBtn${i}">ابدأ الإيجار</button>
-      <button onclick="stopRent(${i})" id="stopBtn${i}" style="background:#dc3545; margin-top:5px;">إنهاء الإيجار</button>
-      <div class="countdown" id="countdown${i}">الوقت المتبقي: -</div>
-    `;
-    container.appendChild(div);
-  }
-
-  // بدء الإيجار
-  function startRent(i) {
-    const name = document.getElementById(`person${i}`).value.trim();
-    const bike = document.getElementById(`bike${i}`).value.trim();
-    const mins = parseInt(document.getElementById(`duration${i}`).value);
-
-    if (!name || !bike || isNaN(mins) || mins <= 0) {
-      alert("من فضلك املأ جميع الخانات بشكل صحيح"); return;
-    }
-
-    const start = getLocalTime();
-    const end = new Date(start.getTime() + mins * 60 * 1000);
-
-    const data = {
-      person: name,
-      bikeName: bike,
-      startTime: start.getTime(),
-      endTime: end.getTime()
+  <script>
+    // Firebase config
+    const firebaseConfig = {
+      apiKey: "PUT-YOUR-API-KEY-HERE",
+      authDomain: "YOUR-PROJECT.firebaseapp.com",
+      databaseURL: "https://YOUR-PROJECT-default-rtdb.firebaseio.com",
+      projectId: "YOUR-PROJECT-ID",
     };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
 
-    // حفظ في Firebase
-    database.ref("bikes/" + i).set(data);
-
-    // تشغيل العداد فوراً محلياً
-    updateCountdown(i, end.getTime(), name, bike);
-  }
-
-  // إيقاف الإيجار
-  function stopRent(i) { database.ref("bikes/" + i).remove(); }
-
-  // تحديث العداد
-  function updateCountdown(i, endTime, person, bikeName) {
-    const countdownEl = document.getElementById(`countdown${i}`);
-    if (timers[i]) clearInterval(timers[i]);
-
-    function tick() {
-      const now = Date.now();
-      let diff = Math.floor((endTime - now) / 1000);
-      const returnTime = formatTime12(new Date(endTime));
-
-      if (diff <= 0) {
-        countdownEl.innerHTML = `انتهى وقت إيجار "<b>${bikeName}</b>" لـ "<b>${person}</b>" عند ${returnTime}`;
-        document.getElementById('alarm').play();
-        clearInterval(timers[i]);
-        return;
-      }
-
-      const mins = Math.floor(diff / 60);
-      const secs = diff % 60;
-      countdownEl.innerHTML = `الوقت المتبقي: ${mins} دقيقة و ${secs} ثانية | ينتهي: ${returnTime}`;
+    // Helpers
+    const $ = (s,r=document)=>r.querySelector(s);
+    const $$ = (s,r=document)=>Array.from(r.querySelectorAll(s));
+    function fmt12(d){
+      const date=(d instanceof Date)?d:new Date(d);
+      let h=date.getHours();
+      const m=String(date.getMinutes()).padStart(2,'0');
+      const s=String(date.getSeconds()).padStart(2,'0');
+      const ampm=h>=12?'م':'ص'; h=h%12; h=h?h:12;
+      return `${h}:${m}:${s} ${ampm}`;
+    }
+    function toast(msg,type='info'){
+      const el=$('#toast');
+      el.classList.remove('hidden');
+      el.className=`fixed bottom-4 inset-x-4 sm:left-1/2 sm:-translate-x-1/2 sm:w-[420px] rounded-xl border p-4 text-sm shadow-lg ${type==='error'?'bg-red-100 dark:bg-red-900 border-red-300':'bg-white dark:bg-gray-800 border-gray-200'}`;
+      el.innerHTML=msg;
+      clearTimeout(el._t);
+      el._t=setTimeout(()=>el.classList.add('hidden'),2800);
     }
 
-    tick();
-    timers[i] = setInterval(tick, 1000);
-  }
-
-  // المزامنة مع Firebase
-  database.ref("bikes").on('value', snapshot => {
-    const bikesData = snapshot.val() || {};
-    for (let i = 1; i <= BIKE_COUNT; i++) {
-      if (bikesData[i]) {
-        const { person, bikeName, endTime } = bikesData[i];
-        document.getElementById(`person${i}`).value = person;
-        document.getElementById(`bike${i}`).value = bikeName;
-        document.getElementById(`duration${i}`).disabled = true;
-        document.getElementById(`startBtn${i}`).disabled = true;
-        updateCountdown(i, endTime, person, bikeName);
-      } else {
-        document.getElementById(`person${i}`).value = '';
-        document.getElementById(`bike${i}`).value = '';
-        document.getElementById(`duration${i}`).value = '';
-        document.getElementById(`duration${i}`).disabled = false;
-        document.getElementById(`startBtn${i}`).disabled = false;
-        document.getElementById(`countdown${i}`).textContent = 'الوقت المتبقي: -';
-        if (timers[i]) { clearInterval(timers[i]); timers[i] = null; }
+    // UI
+    const BIKE_COUNT=12;
+    const timers={};
+    function bikeCard(i){
+      return `
+      <article class="group rounded-2xl border dark:border-gray-700 bg-white dark:bg-gray-800 p-4 shadow-sm hover:shadow-md transition">
+        <div class="flex items-center gap-2 mb-3">
+          <div class="w-9 h-9 rounded-xl bg-blue-100 dark:bg-blue-900 text-blue-700 dark:text-blue-200 grid place-items-center font-bold">${i}</div>
+          <h3 class="text-base font-semibold">العجلة ${i}</h3>
+          <span id="status${i}" class="ms-auto text-xs px-2 py-1 rounded-full bg-gray-100 dark:bg-gray-700 text-gray-600">متاحة</span>
+        </div>
+        <input id="person${i}" class="w-full rounded-xl border dark:border-gray-700 mb-2 px-3 py-2 text-sm focus:ring focus:ring-blue-200 dark:bg-gray-900" placeholder="👤 اسم المستأجر"/>
+        <input id="bike${i}" class="w-full rounded-xl border dark:border-gray-700 mb-2 px-3 py-2 text-sm focus:ring focus:ring-blue-200 dark:bg-gray-900" placeholder="🚲 اسم العجلة"/>
+        <div class="grid grid-cols-2 gap-3">
+          <input id="mins${i}" type="number" min="1" class="rounded-xl border dark:border-gray-700 px-3 py-2 text-sm focus:ring focus:ring-blue-200 dark:bg-gray-900" placeholder="⏱️ المدة (د)"/>
+          <div id="return${i}" class="rounded-xl border dark:border-gray-700 bg-gray-50 dark:bg-gray-900 px-3 py-2 text-sm grid place-items-start">—</div>
+        </div>
+        <div class="mt-4 flex items-center gap-2">
+          <button id="start${i}" class="flex-1 rounded-xl bg-blue-600 text-white px-4 py-2 text-sm font-semibold hover:bg-blue-700">▶️ بدء</button>
+          <button id="stop${i}" class="flex-1 rounded-xl bg-rose-600 text-white px-4 py-2 text-sm font-semibold hover:bg-rose-700" disabled>⏹️ إنهاء</button>
+        </div>
+        <div id="cd${i}" class="mt-3 text-sm font-semibold text-gray-700 dark:text-gray-300">الوقت المتبقي: —</div>
+      </article>`;
+    }
+    function renderGrid(){
+      const wrap=$('#bikes');
+      wrap.innerHTML=Array.from({length:BIKE_COUNT},(_,k)=>bikeCard(k+1)).join('');
+      for(let i=1;i<=BIKE_COUNT;i++){
+        $('#start'+i).addEventListener('click',()=>startRent(i));
+        $('#stop'+i).addEventListener('click',()=>stopRent(i));
       }
     }
-  });
-</script>
 
+    // Logic
+    function startRent(i){
+      const person=$('#person'+i).value.trim();
+      const bike=$('#bike'+i).value.trim();
+      const mins=parseInt($('#mins'+i).value,10);
+      if(!person||!bike||!mins||mins<=0){ toast('⚠️ أدخل البيانات كاملة', 'error'); return; }
+      const start=Date.now(), end=start+mins*60*1000;
+      db.ref('bikes/'+i).set({person,bikeName:bike,startTime:start,endTime:end});
+    }
+    function stopRent(i){ db.ref('bikes/'+i).remove(); }
+    function setDisabled(i,on){
+      $('#person'+i).disabled=on; $('#bike'+i).disabled=on; $('#mins'+i).disabled=on;
+      $('#start'+i).disabled=on; $('#stop'+i).disabled=!on;
+      $('#status'+i).textContent=on?'مؤجرة':'متاحة';
+      $('#status'+i).className='ms-auto text-xs px-2 py-1 rounded-full '+(on?'bg-amber-100 text-amber-800 dark:bg-amber-900 dark:text-amber-200':'bg-emerald-100 text-emerald-700 dark:bg-emerald-900 dark:text-emerald-200');
+    }
+    function startCountdown(i,end,person,bike){
+      const el=$('#cd'+i), ret=$('#return'+i);
+      if(timers[i]) clearInterval(timers[i]);
+      function tick(){
+        const now=Date.now(); let diff=Math.floor((end-now)/1000);
+        if(diff<=0){ el.textContent=`⏰ انتهى الوقت لـ "${bike}" (${person})`; $('#alarm').play().catch(()=>{}); clearInterval(timers[i]); setDisabled(i,false); ret.textContent='—'; return; }
+        const m=Math.floor(diff/60), s=diff%60;
+        el.textContent=`الوقت المتبقي: ${m} دقيقة و ${String(s).padStart(2,'0')} ثانية`;
+        ret.textContent=fmt12(end);
+      }
+      tick(); timers[i]=setInterval(tick,1000);
+    }
+    function stopCountdown(i){ if(timers[i]){clearInterval(timers[i]);timers[i]=null;} $('#cd'+i).textContent='الوقت المتبقي: —'; $('#return'+i).textContent='—'; setDisabled(i,false); }
+    function bindRealtime(){
+      db.ref('bikes').on('value',snap=>{
+        const data=snap.val()||{}; let rented=0;
+        for(let i=1;i<=BIKE_COUNT;i++){
+          if(data[i]){ const {person,bikeName,endTime}=data[i]; $('#person'+i).value=person||''; $('#bike'+i).value=bikeName||''; setDisabled(i,true); startCountdown(i,Number(endTime),person,bikeName); rented++; }
+          else{ stopCountdown(i); $('#person'+i).value=''; $('#bike'+i).value=''; $('#mins'+i).value=''; }
+        }
+        $('#rentedCount').textContent=rented; $('#availableCount').textContent=BIKE_COUNT-rented;
+      });
+    }
+
+    // Time & dark mode
+    function tickNow(){ $('#now').textContent=fmt12(new Date()); }
+    $('#toggleDark').onclick=()=>document.documentElement.classList.toggle('dark');
+    $('#clearAll').onclick=()=>{ if(confirm('مسح كل الحجوزات؟')) db.ref('bikes').remove(); };
+
+    // Search filter
+    $('#searchBox').addEventListener('input',e=>{
+      const val=e.target.value.toLowerCase();
+      $$('#bikes article').forEach(card=>{
+        card.style.display=card.textContent.toLowerCase().includes(val)?'':'none';
+      });
+    });
+
+    // Boot
+    renderGrid(); bindRealtime(); tickNow(); setInterval(tickNow,1000);
+  </script>
 </body>
 </html>
