--- a/index.html
+++ b/index.html
@@ -4,28 +4,26 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>منصّة تأجير العجل</title>
-  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <meta name="color-scheme" content="light dark" />
   <style>
-    body { font-feature-settings: "ss01" on, "cv01" on; transition: background 0.4s; }
-    .hide { display:none; }
+    body { transition: background 0.4s; }
   </style>
 </head>
-<body class="min-h-screen bg-gradient-to-br from-blue-50 to-emerald-50 text-gray-900 dark:from-gray-900 dark:to-gray-800 dark:text-gray-100 selection:bg-blue-200">
+<body class="min-h-screen bg-gradient-to-br from-blue-50 to-emerald-50 text-gray-900 dark:from-gray-900 dark:to-gray-800 dark:text-gray-100">
   <!-- Header -->
   <header class="sticky top-0 z-10 bg-white/70 dark:bg-gray-900/70 backdrop-blur border-b">
     <div class="mx-auto max-w-6xl px-4 py-3 flex items-center gap-4">
       <h1 class="text-xl font-bold text-blue-600">🚲 منصّة تأجير العجل</h1>
       <div class="ms-auto flex items-center gap-3">
         <span id="now" class="text-sm text-gray-600 dark:text-gray-300">—</span>
-        <button id="toggleDark" class="text-xs rounded-lg border px-3 py-1.5 hover:bg-gray-100 dark:hover:bg-gray-800">🌙</button>
-        <button id="clearAll" class="text-xs rounded-lg border px-3 py-1.5 hover:bg-gray-100 dark:hover:bg-gray-800">تفريغ الكل</button>
+        <button id="toggleDark" class="text-xs rounded-lg border px-3 py-1.5">🌙</button>
+        <button id="clearAll" class="text-xs rounded-lg border px-3 py-1.5">تفريغ الكل</button>
       </div>
     </div>
   </header>
 
-  <!-- Stats -->
+  <!-- Counters -->
   <section class="mx-auto max-w-6xl px-4 py-4 grid grid-cols-2 sm:grid-cols-3 gap-3 text-sm">
     <div class="rounded-xl bg-emerald-100 dark:bg-emerald-900 p-3 text-center">
       <p>🚲 متاحة</p>
@@ -36,7 +34,7 @@
       <b id="rentedCount">0</b>
     </div>
     <div class="col-span-2 sm:col-span-1">
-      <input id="searchBox" class="w-full rounded-xl border px-3 py-2 text-sm focus:ring focus:ring-blue-200 dark:bg-gray-800 dark:border-gray-700" placeholder="🔍 ابحث بالاسم أو الرقم">
+      <input id="searchBox" class="w-full rounded-xl border px-3 py-2 text-sm focus:ring dark:bg-gray-800 dark:border-gray-700" placeholder="🔍 ابحث بالاسم أو الرقم">
     </div>
   </section>
 
@@ -77,10 +75,9 @@
       const ampm=h>=12?'م':'ص'; h=h%12; h=h?h:12;
       return `${h}:${m}:${s} ${ampm}`;
     }
-    function toast(msg,type='info'){
+    function toast(msg){
       const el=$('#toast');
       el.classList.remove('hidden');
-      el.className=`fixed bottom-4 inset-x-4 sm:left-1/2 sm:-translate-x-1/2 sm:w-[420px] rounded-xl border p-4 text-sm shadow-lg ${type==='error'?'bg-red-100 dark:bg-red-900 border-red-300':'bg-white dark:bg-gray-800 border-gray-200'}`;
       el.innerHTML=msg;
       clearTimeout(el._t);
       el._t=setTimeout(()=>el.classList.add('hidden'),2800);
@@ -91,21 +88,21 @@
     const timers={};
     function bikeCard(i){
       return `
-      <article class="group rounded-2xl border dark:border-gray-700 bg-white dark:bg-gray-800 p-4 shadow-sm hover:shadow-md transition">
+      <article class="rounded-2xl border dark:border-gray-700 bg-white dark:bg-gray-800 p-4 shadow-sm">
         <div class="flex items-center gap-2 mb-3">
           <div class="w-9 h-9 rounded-xl bg-blue-100 dark:bg-blue-900 text-blue-700 dark:text-blue-200 grid place-items-center font-bold">${i}</div>
           <h3 class="text-base font-semibold">العجلة ${i}</h3>
           <span id="status${i}" class="ms-auto text-xs px-2 py-1 rounded-full bg-gray-100 dark:bg-gray-700 text-gray-600">متاحة</span>
         </div>
-        <input id="person${i}" class="w-full rounded-xl border dark:border-gray-700 mb-2 px-3 py-2 text-sm focus:ring focus:ring-blue-200 dark:bg-gray-900" placeholder="👤 اسم المستأجر"/>
-        <input id="bike${i}" class="w-full rounded-xl border dark:border-gray-700 mb-2 px-3 py-2 text-sm focus:ring focus:ring-blue-200 dark:bg-gray-900" placeholder="🚲 اسم العجلة"/>
+        <input id="person${i}" class="w-full rounded-xl border mb-2 px-3 py-2 text-sm dark:bg-gray-900" placeholder="👤 اسم المستأجر"/>
+        <input id="bike${i}" class="w-full rounded-xl border mb-2 px-3 py-2 text-sm dark:bg-gray-900" placeholder="🚲 اسم العجلة"/>
         <div class="grid grid-cols-2 gap-3">
-          <input id="mins${i}" type="number" min="1" class="rounded-xl border dark:border-gray-700 px-3 py-2 text-sm focus:ring focus:ring-blue-200 dark:bg-gray-900" placeholder="⏱️ المدة (د)"/>
-          <div id="return${i}" class="rounded-xl border dark:border-gray-700 bg-gray-50 dark:bg-gray-900 px-3 py-2 text-sm grid place-items-start">—</div>
+          <input id="mins${i}" type="number" min="1" class="rounded-xl border px-3 py-2 text-sm dark:bg-gray-900" placeholder="⏱️ المدة (د)"/>
+          <div id="return${i}" class="rounded-xl border bg-gray-50 dark:bg-gray-900 px-3 py-2 text-sm">—</div>
         </div>
         <div class="mt-4 flex items-center gap-2">
-          <button id="start${i}" class="flex-1 rounded-xl bg-blue-600 text-white px-4 py-2 text-sm font-semibold hover:bg-blue-700">▶️ بدء</button>
-          <button id="stop${i}" class="flex-1 rounded-xl bg-rose-600 text-white px-4 py-2 text-sm font-semibold hover:bg-rose-700" disabled>⏹️ إنهاء</button>
+          <button id="start${i}" class="flex-1 rounded-xl bg-blue-600 text-white px-4 py-2 text-sm">▶️ بدء</button>
+          <button id="stop${i}" class="flex-1 rounded-xl bg-rose-600 text-white px-4 py-2 text-sm" disabled>⏹️ إنهاء</button>
         </div>
         <div id="cd${i}" class="mt-3 text-sm font-semibold text-gray-700 dark:text-gray-300">الوقت المتبقي: —</div>
       </article>`;
@@ -124,16 +121,19 @@
       const person=$('#person'+i).value.trim();
       const bike=$('#bike'+i).value.trim();
       const mins=parseInt($('#mins'+i).value,10);
-      if(!person||!bike||!mins||mins<=0){ toast('⚠️ أدخل البيانات كاملة', 'error'); return; }
+      if(!person||!bike||!mins||mins<=0){ toast('⚠️ أدخل البيانات كاملة'); return; }
       const start=Date.now(), end=start+mins*60*1000;
       db.ref('bikes/'+i).set({person,bikeName:bike,startTime:start,endTime:end});
+
+      // ✅ شغل العداد فورًا محليًا
+      setDisabled(i,true);
+      startCountdown(i,end,person,bike);
     }
     function stopRent(i){ db.ref('bikes/'+i).remove(); }
     function setDisabled(i,on){
       $('#person'+i).disabled=on; $('#bike'+i).disabled=on; $('#mins'+i).disabled=on;
       $('#start'+i).disabled=on; $('#stop'+i).disabled=!on;
       $('#status'+i).textContent=on?'مؤجرة':'متاحة';
-      $('#status'+i).className='ms-auto text-xs px-2 py-1 rounded-full '+(on?'bg-amber-100 text-amber-800 dark:bg-amber-900 dark:text-amber-200':'bg-emerald-100 text-emerald-700 dark:bg-emerald-900 dark:text-emerald-200');
     }
     function startCountdown(i,end,person,bike){
       const el=$('#cd'+i), ret=$('#return'+i);
